--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <meta property="twitter:image" content="https://scontent.fjog3-1.fna.fbcdn.net/v/t1.0-9/p960x960/35198978_2430161043676047_8635172473211453440_o.jpg?_nc_cat=100&_nc_sid=09cbfe&_nc_ohc=6-dfKI8oiggAX9Pvlbh&_nc_ht=scontent.fjog3-1.fna&_nc_tp=6&oh=1e16eb5ba7d31c5d29465a750e0c6a6b&oe=5EB15971">
   </head>
   <body>
-    <h1>Andang Sapto Pramono</h1>
+    <h1>Andang Pramono</h1>
   </body>
 </html>
