--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
   </head>
   <body>
     <h1>Andang Pramono</h1>
+    <p>My last education was a Bachelor of Informatics at the University of Muhammadiyah Surakarta graduated in June 29, 2019. As a graduate student of Informatics I have learned about Problems Solving Skils and easily adapt to technological developments. I judge myself is a disciplined person, has a high curiosity and always pay attention appearance. I have Intermediate skills in PHP (Codeigniter, Laravel, Web API), Android Studio (Java).</p>
   </body>
 </html>
