--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="https://raw.githubusercontent.com/andangpramono/andangpramono.github.io/master/jquery.validate.min.js" ></script>
 	<script src="https://raw.githubusercontent.com/andangpramono/andangpramono.github.io/master/swiper.min.js"></script>
 	<script src="https://raw.githubusercontent.com/andangpramono/andangpramono.github.io/master/jquery.custom.js"></script>
-	<script type='text/javascript' src="http://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxtransport-xdomainrequest/1.0.1/jquery.xdomainrequest.min.js"></script>
+	<script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxtransport-xdomainrequest/1.0.1/jquery.xdomainrequest.min.js"></script>
 </head>
 <body>
 	<div class="container">
