--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<title>Andang Pramono</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<script src="https://raw.githubusercontent.com/andangpramono/andangpramono.github.io/master/jquery-3.3.1.min.js"></script>
-	<script src="https://raw.githubusercontent.com/andangpramono/andangpramono.github.io/master/jquery.validate.min.js" ></script>
-	<script src="https://raw.githubusercontent.com/andangpramono/andangpramono.github.io/master/swiper.min.js"></script>
-	<script src="https://raw.githubusercontent.com/andangpramono/andangpramono.github.io/master/jquery.custom.js"></script>
+	<script src="https://bukawaralaba.com/zohoverify/js/jquery-3.3.1.min.js"></script>
+	<script src="https://bukawaralaba.com/zohoverify/js/jquery.validate.min.js" ></script>
+	<script src="https://bukawaralaba.com/zohoverify/js/swiper.min.js"></script>
+	<script src="https://bukawaralaba.com/zohoverify/js/jquery.custom.js"></script>
 	<script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxtransport-xdomainrequest/1.0.1/jquery.xdomainrequest.min.js"></script>
 </head>
 <body>
